[package]
name = "cli-template"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust CLI template"
license = "MIT OR Apache-2.0"
repository = ""
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

