[package]
name = "rusteth"
version = "0.1.0"
edition = "2021"
description = "Distro-agnostic network management CLI for Linux hosts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusteth/rusteth"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

